# projeto-antigravity

./: .gitignore  MLproject  Makefile  PRD.md  README.md  conda.yaml  mlflow.db  pyproject.toml  python_env.yaml
configs/: baseline.yaml  experimento_hidden16.yaml
notebooks/: rede_neural.ipynb
src/: preprocess.py  train.py  utils.py
src/rede_neural/: data_ingestion.py  evaluate.py  model.py  preprocess.py  train.py  utils.py
tests/: test_pipeline.py
