[tool.poetry]
name = "projeto-antigravity"
version = "0.1.0"
description = "Standardized ML Training Pipeline (SMTP)"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mlflow = "^2.0.0"
scikit-learn = "^1.0.0"
pandas = "^1.3.0"
numpy = "^1.21.0"
matplotlib = "^3.4.0"
torch = "*"
seaborn = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
